# PipelineGuard

./: BENCHMARKS.md  CLEANUP_PLAN.md  CONTRIBUTING.md  Golden-standard.txt  README.md  pyproject.toml  software+plan.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
deploy/docker/: .env.example  Dockerfile  docker-compose.yml  prometheus-docker.yml
deploy/k8s/grafana-dashboards/: dashboards.yml  pipelineguard.json
docs/: alert-rules.md  dashboard-guide.md  faq.md  metrics-reference.md  multi-tenant-guide.md  quickstart.md  sdk-reference.md  sla-guide.md  webhook-guide.md
docs/adr/: 006-pipeline-guard-monitoring.md
docs/architecture/: overview.md
examples/: latency_drift_detected.json  silent_failure_detected.json  weekly_summary.json  weekly_summary.txt
pipelineguard/: __init__.py  sdk.py
scripts/: demo.sh  generate_keys.py  simulate_load.py
src/application/schemas/: pagination.py
src/application/services/: auth_service.py  pipeline_service.py
src/application/tasks/: celery_app.py  pipeline_tasks.py
src/domain/models/: pipeline.py
src/domain/services/: alert_deduplicator.py  cost_calculator.py  drift_analyzer.py  summary_generator.py  tenant_lifecycle.py
src/infrastructure/: adapters.py  container.py
src/infrastructure/auth/: password_handler.py
src/infrastructure/cost/: metrics_collector.py
src/infrastructure/database/: engine.py  models.py  pipeline_repositories.py  repository.py  tenant_schema_manager.py
src/infrastructure/gdpr/: retention_engine.py
src/infrastructure/notifications/: slack.py  teams.py  webhook.py
src/infrastructure/observability/: metrics.py
src/presentation/: main.py
tests/contract/: test_openapi_contract.py  test_pipeline_schemas.py  test_schema_validation.py
tests/integration/: conftest.py  test_audit_repository.py  test_billing_repository.py  test_full_tenant_lifecycle.py  test_pipeline_repository.py  test_tenant_repository.py  test_user_repository.py
tests/unit/: conftest.py
tests/unit/app/: test_auth_service.py  test_billing_service.py  test_gdpr_service.py  test_pipeline_service.py  test_tenant_service.py
tests/unit/domain/: test_alert_deduplicator.py  test_audit_model.py  test_billing_model.py  test_cost_calculator.py  test_drift_analyzer.py  test_pipeline_model.py  (+3 more)
(+13 files in other folders)
